Impostazione del tema della presentazione

--- a/Beamer/Beamer.tex
+++ b/Beamer/Beamer.tex
@@ -10,8 +10,8 @@
 \institute{Università Ca'Foscari}
 \logo{\includegraphics[width=15mm]{logo-unive.png}}
 
-\usetheme{Berkeley}
-\setbeamercovered{dynamic}
+\usetheme{Szeged}
+\usecolortheme{beaver}
 
 \begin{document}
 
@@ -20,17 +20,10 @@
 \end{frame}
 
 \begin{frame}
-   \section{Un cavolo}
-   \frametitle{Piano della presentazione}
-   \tableofcontents
-\end{frame}
-
-\begin{frame}
-   \frametitle{Un esempio}
+   \frametitle{Argomenti}
    \begin{itemize}
-      \item<1-> Mane
-      \item<2-> Tekel
-      \item<3-> Fares
+      \item XMl
+      \item AJAX
    \end{itemize}
 \end{frame}
 
