Aggiornamento della struttura di base...

--- a/Beamer/Beamer.tex
+++ b/Beamer/Beamer.tex
@@ -3,7 +3,6 @@
 \usepackage[T1]{fontenc}	% imposta la codifica dei font
 \usepackage[utf8]{inputenc}	% lettere accentate da tastiera
 \usepackage[italian]{babel}	% per scrivere in italiano
-
 \usepackage{listings}
 
 \title{Xml e Ajax}
@@ -53,5 +52,17 @@
 </DataModelElement> 
     \end{verbatim}
 \end{frame}
+
+\section{AJAX}
+\subsection{Cos'è Ajax}
+
+\begin{frame}
+    \frametitle{Cos'è Ajax}
+    \begin{itemize}
+    \item \textbf{A}synchronous \textbf{J}avaScript \textbf{A}nd \textbf{X}ML
+    \end{itemize}
+
+\end{frame}
+
 
 \end{document}
