--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -7,6 +7,7 @@
 %*********************************************************************************
 % Impostazioni di biblatex
 %*********************************************************************************
+
 \usepackage[hyperref=true,natbib=true,style=alphabetic,
 citestyle=verbose-trad1,
 sorting=nyt,
@@ -34,9 +35,13 @@ XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textb
 È derivato dallo standard SGML (ISO 8879)\footnote{Lo Standard Generalized Markup Language (SGML), è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form).} 
 ed è pensato per l'utilizzo su larga scala ed è nato per uso legato alla rete anche se poi esteso anche a formato per il salvataggio di file.
 
+\section{Scopo}
+XML si prefigge di essere una versione semplificata di Standard Generalized Markup Language, un metalinguaggio pensato per definire documenti leggibili dal computer. Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati 
+
 \chapter{AJAX}
 AJAX è una tecnica di sviluppo software basato sullo scambio dati in backgound tra il client e il server. 
 
-\nocite{w3c}\printbibliography
+\nocite{w3c}
+\printbibliography
 
 \end{document}
