--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -9,10 +9,8 @@
 
 
 
-@book{tanenbaum2003reti,
+@book{tanenbaum:2003reti,
 	Author = {Tanenbaum, A.S.},
-	Date-Added = {2014-11-27 17:04:08 +0000},
-	Date-Modified = {2014-11-27 17:04:08 +0000},
 	Isbn = {9788871926407},
 	Publisher = {Pearson Education Italia},
 	Title = {Reti di calcolatori},
@@ -20,7 +18,7 @@
 	Year = {2011},
 	Bdsk-Url-1 = {http://books.google.it/books?id=n5m6VFpZYgUC}}
 
-@url{w3c,
+@url{site:w3c,
 	Title = {Pagina dello standard XML su W3C},
 	Url = {http://www.w3.org/XML/},
 	Bdsk-Url-1 = {http://www.w3.org/XML/}}
