Aggiunta parte iniziale di XML Schema e aggiunti elementi nella bibliografia

--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -1,13 +1,6 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-
-%% Created for matteo scarpa at 2014-11-27 18:11:41 +0100 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
+@webpage{site:w3cxmlschame,
+	Title = {Pagina dello standard XML Schema},
+	Url = {http://www.w3.org/TR/xmlschema11-1/}}
 
 @book{tanenbaum:2003reti,
 	Author = {Tanenbaum, A.S.},
@@ -18,7 +11,8 @@
 	Year = {2011},
 	Bdsk-Url-1 = {http://books.google.it/books?id=n5m6VFpZYgUC}}
 
-@url{site:w3c,
-	Title = {Pagina dello standard XML su W3C},
+@webpage{site:w3cxml,
+	Date-Modified = {2014-11-28 16:59:01 +0000},
+	Title = {Pagina dello standard XML},
 	Url = {http://www.w3.org/XML/},
 	Bdsk-Url-1 = {http://www.w3.org/XML/}}
