--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -18,7 +18,7 @@ autocite=footnote,
 \usepackage{hyperref}
 \renewcommand\bibname{Sitografia e riferimenti bibliografici}
 %\renewcommand{\refname}{top}
-\bibliography{bibliografiareti.bib} 
+\bibliography{bibliografiareti} 
 
 \usepackage{graphicx}
 
@@ -31,13 +31,13 @@ autocite=footnote,
 \maketitle
 
 \chapter{XML}
-XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{vedi \cite{site:w3c}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
+XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{vedi \cite{site:w3cxml}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
 È derivato dallo standard SGML (ISO 8879) ed è pensato per l'utilizzo su larga scala ed è nato per uso legato alla rete anche se poi esteso anche a formato per il salvataggio di file.
 
 \section{Scopo}
 XML si prefigge di essere una versione semplificata di Standard Generalized Markup Language, o SGML, che è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
 
-Successivamente è stato introdotto l' XML Schema come linguaggio di strutturazione e definizione dei documenti XML che rese obsoleto l'uso dei DTD.
+Successivamente è stato introdotto l' XML Schema come linguaggio di strutturazione e definizione dei documenti XML che rese obsoleto l'uso dei DTD. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
 
 
 La funzione dell'XML è quella di formattare informazioni leggibili sia dalla macchina che dall'uomo che potessero essere inviate attraverso la rete.
