Aggiunte piccole note

--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -37,7 +37,7 @@ XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textb
 \section{Scopo}
 XML si prefigge di essere una versione semplificata di Standard Generalized Markup Language, o SGML, che è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
 
-Successivamente è stato introdotto l' XML Schema come linguaggio di strutturazione e definizione dei documenti XML che rese obsoleto l'uso dei DTD. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
+Successivamente è stato introdotto l' XML Schema come linguaggio di strutturazione e definizione dei documenti XML che rese obsoleto l'uso dei DTD. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml attraverso i namespace ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
 
 
 La funzione dell'XML è quella di formattare informazioni leggibili sia dalla macchina che dall'uomo che potessero essere inviate attraverso la rete.
