--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -21,7 +21,6 @@ autocite=footnote,
 \bibliography{bibliografiareti} 
 
 \usepackage{graphicx}
-
 \title{\includegraphics[width=120mm]{logo-unive.png} \\ Xml e Ajax}
 \author{Matteo Scarpa\\ 845087}
 \date{}
@@ -31,16 +30,30 @@ autocite=footnote,
 \maketitle
 
 \chapter{XML}
+\section{Cos'è un file XML}
 XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{vedi \cite{site:w3cxml}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
-È derivato dallo standard SGML (ISO 8879) ed è pensato per l'utilizzo su larga scala ed è nato per uso legato alla rete anche se poi esteso anche a formato per il salvataggio di file.
+È derivato dallo standard SGML  ed è pensato per l'utilizzo su larga scala ed è nato per uso legato alla rete anche se poi esteso anche a formato per il salvataggio di file.
 
-\section{Scopo}
-XML si prefigge di essere una versione semplificata di Standard Generalized Markup Language, o SGML, che è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
+Nel 1996 si costituì l’XML Working Group all'interno del W3C per poter definire un linguaggio di markup che offrisse maggior libertà nella definizione dei tag. Questo perchè l'assenza di uno standard abbastanza elastico stava portando i vari sviluppatori di browser a fare "estensioni" non standard creando un potenziale caos nella condivisione dei file nel web.
+Questo gruppo ha creato la struttura di base dell' XML e ha portato alla sua prima definizione sotto forma di standard. 
+Questo standar, inizialmente pensato per la trasmissione dei dati attraverso il web, ha avuto risvolti inaspettati. Dopo poco tempo ha infatti permesso lo sviluppo di tutta una serie di formati di file indipendenti dalla trasmissione via web, pensati per il semplice salvataggio. Tra questi ricordiamo: 
+\begin{itemize}
+\item \textbf{ODF} formato di documenti OpenSource. Si struttura come una cartella compressa contenente file XML per la definizione del contenuto del documento\footnote{Standard ISO \cite{site:isoodf} }
+\item \textbf{SVG} formato per le immagini vettoriali. Definisce gli oggetti geometrici attraverso funzioni matematiche. Questo permette di avere immagini "leggibili" da codice e facilemente modificabili con processi automatici, che vanno a leggere il contenuto dell'XML e a modificare i tag di interesse.
+\end{itemize}
 
-Successivamente è stato introdotto l' XML Schema come linguaggio di strutturazione e definizione dei documenti XML che rese obsoleto l'uso dei DTD. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml attraverso i namespace ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
+
+XML si prefigge di essere una versione semplificata di Standard Generalized Markup Language (conosciuto anche come SGML o ISO 8879) da cui deriva.
+Il SGML è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
+Successivamente per le definizioni di grammatiche per le applicazioni XML è stato in trodotto il linguaggio XML Schema, pensato apposta per questa funzione. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml attraverso i namespace ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
 
 
-La funzione dell'XML è quella di formattare informazioni leggibili sia dalla macchina che dall'uomo che potessero essere inviate attraverso la rete.
+\section{DTD}
+Il DTD permette di descrivere i tag html da utilizzare all'interno di un documento e il loro rapporto reciproco. Questo permette un ampio controllo sul contenuto del documento e semplifica il lavoro di elaborazione di entrambi le parti. 
+
+Infatti se si concordano in anticipo i DTD da utilizzare nella trasmissione dei dati si ottiene un documento XML 
+
+\section{XML Schema}
 
 \chapter{AJAX}
 AJAX è una tecnica di sviluppo software basato sullo scambio dati in backgound tra il client e il server. 
