--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -1,6 +1,31 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for matteo scarpa at 2014-11-30 10:37:53 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@webpage{site:w3csvg,
+	Date-Added = {2014-11-30 09:37:14 +0000},
+	Date-Modified = {2014-11-30 09:37:49 +0000},
+	Title = {Pagina dello standard SVG},
+	Url = {http://www.w3.org/TR/SVG/}}
+
+@webpage{site:isoodf,
+	Date-Added = {2014-11-30 09:31:50 +0000},
+	Date-Modified = {2014-11-30 09:32:22 +0000},
+	Title = {Pagina dello standard ODF},
+	Url = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485},
+	Bdsk-Url-1 = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485}}
+
 @webpage{site:w3cxmlschame,
 	Title = {Pagina dello standard XML Schema},
-	Url = {http://www.w3.org/TR/xmlschema11-1/}}
+	Url = {http://www.w3.org/TR/xmlschema11-1/},
+	Bdsk-Url-1 = {http://www.w3.org/TR/xmlschema11-1/}}
 
 @book{tanenbaum:2003reti,
 	Author = {Tanenbaum, A.S.},
