Creata una versione schelettrica della prima parte della documentazione

--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-11-30 10:37:53 +0100 
+%% Created for matteo scarpa at 2014-11-30 12:41:00 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13,7 +13,8 @@
 	Date-Added = {2014-11-30 09:37:14 +0000},
 	Date-Modified = {2014-11-30 09:37:49 +0000},
 	Title = {Pagina dello standard SVG},
-	Url = {http://www.w3.org/TR/SVG/}}
+	Url = {http://www.w3.org/TR/SVG/},
+	Bdsk-Url-1 = {http://www.w3.org/TR/SVG/}}
 
 @webpage{site:isoodf,
 	Date-Added = {2014-11-30 09:31:50 +0000},
