--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -3,22 +3,28 @@
 \usepackage[T1]{fontenc}	% imposta la codifica dei font
 \usepackage[utf8]{inputenc}	% lettere accentate da tastiera
 \usepackage[italian]{babel}	% per scrivere in italiano
+\usepackage[babel]{csquotes}
 
 %*********************************************************************************
 % Impostazioni di biblatex
 %*********************************************************************************
+\usepackage[bibstyle=alphabetic,citestyle=alphabetic,,backend=bibtex]{biblatex}
 
-\usepackage[hyperref=true,natbib=true,style=alphabetic,
-citestyle=verbose-trad1,
-sorting=nyt,
-autocite=footnote,
-%autocite=inline,
-%citestyle=authoryear-ibid,  %% Eventually will use this
-,backend=bibtex]{biblatex}
-\usepackage{hyperref}
-\renewcommand\bibname{Sitografia e riferimenti bibliografici}
-%\renewcommand{\refname}{top}
 \bibliography{bibliografiareti} 
+
+\DeclareBibliographyCategory{libri}\DeclareBibliographyCategory{web}
+
+\defbibheading{libri}{\subsection*{Manuali e Testi consultati}}\defbibheading{web}{\subsection*{Siti Web consultati}}
+
+\addtocategory{libri}{tanenbaum:reti}
+\addtocategory{web}{site:w3cxmlschame}
+\addtocategory{web}{site:w3cxml}
+\addtocategory{web}{site:w3csvg}
+\addtocategory{web}{site:isoodf}
+
+
+%*********************************************************************************
+
 
 \usepackage{graphicx}
 \title{\includegraphics[width=120mm]{logo-unive.png} \\ Xml e Ajax}
@@ -49,7 +55,7 @@ Il SGML è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) ave
 \section{Document Type Definition}
 Il \textbf{D}ocument \textbf{T}ype \textbf{D}efinition (o DTD) permette di descrivere i tag html da utilizzare all'interno di un documento e il loro rapporto reciproco. Questo permette un ampio controllo sul contenuto del documento e semplifica il lavoro di elaborazione di entrambi le parti. 
 
-Infatti se si concordano in anticipo i DTD da utilizzare nella trasmissione dei dati si ottiene un documento XML facilmente leggibile da entrambi le parti. Per questo motivo 
+Infatti se si concordano in anticipo i DTD da utilizzare nella trasmissione dei dati si ottiene un documento XML facilmente leggibile da entrambi le parti. Per questo motivo spesso il formato XML viene considerato appartenente al livello di presentazione del modello ISO\footnote{come è scritto anche nel\textcite[p.~42]{tanenbaum:reti} il livello di presentazione come quello di codifica della sintassi dei file per questo motivo viene spesso associato a questo livello}
 
 \section{XML Schema}
 Successivamente per le definizioni di grammatiche per le applicazioni XML è stato in trodotto il linguaggio XML Schema, pensato apposta per questa funzione. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml attraverso i namespace ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
@@ -58,7 +64,7 @@ Successivamente per le definizioni di grammatiche per le applicazioni XML è sta
 \chapter{AJAX}
 AJAX è una tecnica di sviluppo software basato sullo scambio dati in backgound tra il client e il server. 
 
-\nocite{w3c}
-\printbibliography
+
+\newpage\section*{\refname}\printbibliography[heading=libri, category=libri]\printbibliography[heading=web, category=web]
 
 \end{document}
