--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,12 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-11-30 16:53:50 +0100 
+%% Created for matteo scarpa at 2014-12-01 10:37:14 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@online{site:w3dx3d,
+	Date-Added = {2014-12-01 08:22:14 +0000},
+	Date-Modified = {2014-12-01 08:23:32 +0000},
+	Title = {Pagina dello standard X3D},
+	Url = {http://www.web3d.org/documents/specifications/19775-1/V3.3/},
+	Bdsk-Url-1 = {http://www.web3d.org/documents/specifications/19775-1/V3.3/}}
 
 @online{site:w3csvg,
 	Date-Added = {2014-11-30 09:37:14 +0000},
@@ -30,11 +37,9 @@
 
 @book{tanenbaum:reti,
 	Author = {Tanenbaum, A.S.},
-	Date-Modified = {2014-11-30 15:14:51 +0000},
-	Isbn = {9788871926407},
+	Date-Modified = {2014-12-01 09:34:36 +0000},
 	Publisher = {Pearson Education Italia},
 	Title = {Reti di calcolatori},
-	Url = {http://books.google.it/books?id=n5m6VFpZYgUC},
 	Year = {2011},
 	Bdsk-Url-1 = {http://books.google.it/books?id=n5m6VFpZYgUC}}
 
