--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -39,15 +39,25 @@
 \begin{document}
 
 \maketitle
+\tableofcontents
 
 \chapter{XML}
 \section{Cos'è un file XML}
 XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{Standard W3C \cite{site:w3cxml}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
 È derivato dallo standard SGML  ed è pensato per l'utilizzo su larga scala ed è nato per uso legato alla rete anche se poi esteso anche a formato per il salvataggio di file.
 
-Nel 1996 si costituì l’XML Working Group all'interno del W3C per poter definire un linguaggio di markup che offrisse maggior libertà nella definizione dei tag. Questo perchè l'assenza di uno standard abbastanza elastico stava portando i vari sviluppatori di browser a fare "estensioni" non standard creando un potenziale caos nella condivisione dei file nel web.
-Questo gruppo ha creato la struttura di base dell' XML e ha portato alla sua prima definizione sotto forma di standard. 
-Questo standar, inizialmente pensato per la trasmissione dei dati attraverso il web, ha avuto risvolti inaspettati. Dopo poco tempo ha infatti permesso lo sviluppo di tutta una serie di formati di file indipendenti dalla trasmissione via web, pensati per il semplice salvataggio. Tra questi ricordiamo: 
+\subsection{Storia del XML}
+XML si prefigge di essere una versione semplificata di \textbf{S}tandard \textbf{G}eneralized \textbf{M}arkup \textbf{L}anguage (conosciuto anche come SGML o ISO 8879) da cui deriva.
+Il SGML è un metalinguaggio definito come standard ISO\footnote{Standard ISO \cite{site:isosgml}}  avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
+
+Lo sviluppo dell' XML parte nel 1996 quando si costituì l’XML Working Group all'interno del W3C per poter definire un linguaggio di markup che offrisse maggior libertà nella definizione dei tag rispetto a SGML. Questo viene fatto perchè l'assenza di uno standard abbastanza elastico stava portando i vari sviluppatori di browser e di formati per il web a fare "estensioni" non standard creando caos nella condivisione dei file nel web in quanto solo il loro prodotto poteva visualizzare correttamente i file.
+L' XML Working Group ha quindi definito la struttura di base dell' XML e ha portato alla sua prima definizione di uno standard riconosciuto dell XML. 
+
+
+Questo standar, inizialmente pensato per la trasmissione dei dati attraverso il web, ha avuto risvolti inaspettati. Dopo poco tempo ha infatti permesso lo sviluppo di tutta una serie di formati di file indipendenti dalla trasmissione via web, pensati per il semplice salvataggio.
+Per questo motivo spesso il formato XML viene considerato appartenente al livello di presentazione del modello ISO.\footnote{come è scritto anche nel\textcite[p.~42]{tanenbaum:reti} il livello di presentazione come quello di codifica della sintassi dei file per questo motivo viene spesso associato a questo livello}
+
+Tra i vari formati derivati ricordiamo:
 \begin{itemize}
 \item \textbf{ODF} formato di documenti OpenSource. Si struttura come una cartella compressa contenente file XML per la definizione del contenuto del documento\footnote{Standard ISO \cite{site:isoodf} }
 \item \textbf{SVG} formato per le immagini vettoriali. Definisce gli oggetti geometrici attraverso funzioni matematiche. Questo permette di avere immagini "leggibili" da codice e facilemente modificabili con processi automatici, che vanno a leggere il contenuto dell'XML e a modificare i tag di interesse.\footnote{Standard  W3C \cite{site:w3csvg}}
@@ -71,14 +81,22 @@ In più, per essere correttamente visualizzato deve essere \textbf{ben formattat
 \item I tag sono \textit{case sensitive} quindi bisogna fare attenzione quando definisco i tag (esempio: il tag \textit{PianoForte} è diverso dal tag \textit{Pianoforte} e possono essere utilizzati per indicare tag dalla funzione diversa)
 \end{itemize}
 
-\subsection{Grammatica e definizione degli elementi sintattici}
-Per questo motivo spesso il formato XML viene considerato appartenente al livello di presentazione del modello ISO\footnote{come è scritto anche nel\textcite[p.~42]{tanenbaum:reti} il livello di presentazione come quello di codifica della sintassi dei file per questo motivo viene spesso associato a questo livello}
+\section{Grammatica e definizione degli elementi sintattici}
+Il formato di file XML per certi punti di vista è molto aperto e permette una grande libertà nei tag pur mantenendo una sintassi stretta e bene definita.
+Questo comporta, però, una definizione di sintassi unica per la rappresentazione dei documenti che bisogna concordare tra gli utilizzatori di quel determinato tipo di documento XML. Questo ha portato alla necessità di definire delle \textbf{grammatiche} ovvero dei documenti che definisco quali sono i tag XML da utilizzare e come all'interno del documento che si ha intenzione di utilizzare.
 
-\section{Standard Generalized Markup Language}
-XML si prefigge di essere una versione semplificata di \textbf{S}tandard \textbf{G}eneralized \textbf{M}arkup \textbf{L}anguage (conosciuto anche come SGML o ISO 8879) da cui deriva.
-Il SGML è un metalinguaggio definito come standard ISO (ISO 8879:1986 SGML) avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
 
-\section{Document Type Definition}
+Questa tipologia di documenti viene definita in un file (solitamente a parte rispetto all' XML e facilmente reperibile come può essere con un indirizzo internet) che viene inserito sottoforma di link all'interno dell XML in cui vengono inserite le informazioni. Questo documento solitamente esprime dei vincoli su come debba essere strutturato XML: 
+\begin{itemize}
+\item Qual'è il tag radice
+\item Quali e quanti tag sono sotto a un determinato tag
+\item Quali attributi possono avere i vari tag
+\item Quali tag non possono mancare 
+\end{itemize}
+
+Per questo genere di lavoro sono stati definiti due tipi di file: DTD e il XML Schema 
+
+\subsection{Document Type Definition}
 Il \textbf{D}ocument \textbf{T}ype \textbf{D}efinition (o DTD) permette di descrivere i tag html da utilizzare all'interno di un documento e il loro rapporto reciproco. Questo permette un ampio controllo sul contenuto del documento e semplifica il lavoro di elaborazione di entrambi le parti. 
 
 \section{XML Schema}
