--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,41 +2,54 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-12-01 12:57:08 +0100 
+%% Created for matteo scarpa at 2014-12-01 18:36:02 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@online{site:isosgml,
-	Date-Added = {2014-12-01 11:56:00 +0000},
-	Date-Modified = {2014-12-01 11:57:00 +0000},
-	Title = {Pagina dello standard SGML},
-	Urldate = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387}}
+@webpage{site:w3cXMLHttpRequest1,
+	Date-Added = {2014-12-01 17:34:04 +0000},
+	Date-Modified = {2014-12-01 17:35:25 +0000},
+	Title = {Pagina dell XMLHttpRequest  Candidate Recommendation},
+	Url = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/}}
 
-@online{site:w3dx3d,
+@webpage{site:ajaxhtml,
+	Date-Added = {2014-12-01 17:14:54 +0000},
+	Date-Modified = {2014-12-01 17:35:56 +0000},
+	Title = {Tutorial su AJAX},
+	Url = {http://www.html.it/guide/guida-ajax/}}
+
+@webpage{site:isosgml,
+	Date-Added = {2014-12-01 11:56:00 +0000},
+	Date-Modified = {2014-12-01 17:35:45 +0000},
+	Title = {Pagina dello standard SGML},
+	Url = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387}}
+
+@webpage{site:w3dx3d,
 	Date-Added = {2014-12-01 08:22:14 +0000},
-	Date-Modified = {2014-12-01 08:23:32 +0000},
+	Date-Modified = {2014-12-01 17:34:42 +0000},
 	Title = {Pagina dello standard X3D},
 	Url = {http://www.web3d.org/documents/specifications/19775-1/V3.3/},
 	Bdsk-Url-1 = {http://www.web3d.org/documents/specifications/19775-1/V3.3/}}
 
-@online{site:w3csvg,
+@webpage{site:w3csvg,
 	Date-Added = {2014-11-30 09:37:14 +0000},
-	Date-Modified = {2014-11-30 09:37:49 +0000},
+	Date-Modified = {2014-12-01 17:35:41 +0000},
 	Title = {Pagina dello standard SVG},
 	Url = {http://www.w3.org/TR/SVG/},
 	Bdsk-Url-1 = {http://www.w3.org/TR/SVG/}}
 
-@online{site:isoodf,
+@webpage{site:isoodf,
 	Date-Added = {2014-11-30 09:31:50 +0000},
-	Date-Modified = {2014-11-30 09:32:22 +0000},
+	Date-Modified = {2014-12-01 17:35:51 +0000},
 	Title = {Pagina dello standard ODF},
 	Url = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485},
 	Bdsk-Url-1 = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485}}
 
-@online{site:w3cxmlschame,
+@webpage{site:w3cxmlschame,
+	Date-Modified = {2014-12-01 17:34:47 +0000},
 	Title = {Pagina dello standard XML Schema},
 	Url = {http://www.w3.org/TR/xmlschema11-1/},
 	Bdsk-Url-1 = {http://www.w3.org/TR/xmlschema11-1/}}
@@ -49,8 +62,8 @@
 	Year = {2011},
 	Bdsk-Url-1 = {http://books.google.it/books?id=n5m6VFpZYgUC}}
 
-@online{site:w3cxml,
-	Date-Modified = {2014-11-28 16:59:01 +0000},
+@webpage{site:w3cxml,
+	Date-Modified = {2014-12-01 17:35:35 +0000},
 	Title = {Pagina dello standard XML},
 	Url = {http://www.w3.org/XML/},
 	Bdsk-Url-1 = {http://www.w3.org/XML/}}
