--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,30 +2,40 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-12-01 18:36:02 +0100 
+%% Created for matteo scarpa at 2014-12-01 20:05:11 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@webpage{site:xmlhttpcompatibilita,
+	Date-Added = {2014-12-01 18:57:37 +0000},
+	Date-Modified = {2014-12-01 19:05:09 +0000},
+	Title = {Pagina per il confronto di compatibilit{\`a} dei vari browser per l'API XMLHttp},
+	Url = {http://caniuse.com/#feat=xhr2},
+	Bdsk-Url-1 = {http://caniuse.com/#feat=xhr2}}
+
 @webpage{site:w3cXMLHttpRequest1,
 	Date-Added = {2014-12-01 17:34:04 +0000},
 	Date-Modified = {2014-12-01 17:35:25 +0000},
-	Title = {Pagina dell XMLHttpRequest  Candidate Recommendation},
-	Url = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/}}
+	Title = {Pagina dell XMLHttpRequest Candidate Recommendation},
+	Url = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/},
+	Bdsk-Url-1 = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/}}
 
 @webpage{site:ajaxhtml,
 	Date-Added = {2014-12-01 17:14:54 +0000},
 	Date-Modified = {2014-12-01 17:35:56 +0000},
 	Title = {Tutorial su AJAX},
-	Url = {http://www.html.it/guide/guida-ajax/}}
+	Url = {http://www.html.it/guide/guida-ajax/},
+	Bdsk-Url-1 = {http://www.html.it/guide/guida-ajax/}}
 
 @webpage{site:isosgml,
 	Date-Added = {2014-12-01 11:56:00 +0000},
 	Date-Modified = {2014-12-01 17:35:45 +0000},
 	Title = {Pagina dello standard SGML},
-	Url = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387}}
+	Url = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387},
+	Bdsk-Url-1 = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387}}
 
 @webpage{site:w3dx3d,
 	Date-Added = {2014-12-01 08:22:14 +0000},
