--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-12-01 20:05:11 +0100 
+%% Created for matteo scarpa at 2014-12-02 22:38:23 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{site:w3chtml5,
+	Date-Added = {2014-12-02 21:37:35 +0000},
+	Date-Modified = {2014-12-02 21:38:13 +0000},
+	Title = {Pagina dello standard HTML%},
+	Url = {http://www.w3.org/TR/html5/}}
+
+@book{flanaganjavascript,
+	Author = {David Flanagan},
+	Date-Added = {2014-12-02 08:17:00 +0000},
+	Date-Modified = {2014-12-02 08:27:51 +0000},
+	Publisher = {O'Reilly},
+	Title = {Javascript - The dinitive Guide},
+	Year = {2011}}
 
 @webpage{site:xmlhttpcompatibilita,
 	Date-Added = {2014-12-01 18:57:37 +0000},
